# sshconfig

./: .gitignore  LICENSE  README.md  pyproject.toml  sshconfig.py
tests/: test_funcs.py  test_sshconfig.py
tests/resources/: test_config
