[tool.poetry]
name = "sshconfig"
version = "0.1.0"
description = "A simple Python module for interacting with SSH config files."
authors = ["Adam Bates <adambates923@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/abates20/sshconfig"


[tool.poetry.dependencies]
python = ">=3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
